[PE] Fix DevTools Performance/Frames/Layers

The DevTools front-end still expect the renderer output Position.

Bug: 920698
Change-Id: I4c03167fcdcbe78ab2dfefc5e7912d263fd49ce7
Reviewed-on: https://chromium-review.googlesource.com/c/1407659
Reviewed-by: Philip Rogers <pdr@chromium.org>
Reviewed-by: vmpstr <vmpstr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622518}
Former-commit-id: aeea36a3be80dd7636cca27f90562bf2b07a4460